python/testData/quickFixes/PyTypeHintsQuickFixTest/selfInAnnotation.py
class A:
    def method(self, i: int):
        v1: <error descr="Invalid type 'self'">se<caret>lf</error>.B